Split out IOState to its own header and cpp file
Signed-off-by: Rick Taylor <rick@tropicalstormsoftware.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -69,6 +69,8 @@ ooxml_SOURCES = \
 	src/Decoder.cpp \
 	src/IO.h \
 	src/IO.cpp \
+	src/IOState.h \
+	src/IOState.cpp \
 	src/Tokenizer.h \
 	src/Tokenizer.cpp \
 	src/Token.h \
