Now uses an external TextDecl parser.  Much better!
Signed-off-by: Rick Taylor <rick@tropicalstormsoftware.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -76,6 +76,7 @@ ooxml_SOURCES = \
 	src/Token.h \
 	src/Token.cpp \
 	src/xml.ragel \
+	src/decl.ragel \
 	src/ooxml.cpp
 		
 #ooxml_la_CXXFLAGS = $(INCICONV)
